# jaeger

./: .branch_marker  .codecov.yml  .dockerignore  .editorconfig  .fossa.yml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .mockery.header.txt  .mockery.yaml  .pre-commit-config.yaml  .schemagen.yaml  .travis  .travis.yml  .yarnrc  ADOPTERS.md  AGENTS.md  AI_POLICY.md  AI_USAGE_POLICY.md  ARCHITECTURE_DIAGRAMS.md  ASSURANCE-CASE.md  BUG-TRIAGE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_GUIDELINES.md  Dockerfile  GOVERNANCE.md  GithubWorkflow.md  Gopkg.toml  IMPLEMENTATION_DETAILS.md  INVESTIGATION_REMOVE_V1_QUERYSERVICE.md  MAINTAINERS.md  Makefile  Makefile.BuildBinaries.mk  Makefile.BuildInfo.mk  Makefile.Crossdock.mk  (+50 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  go-cache-key  labeler-needs-triage.yaml  mergify.yml  stale.yml
.travis/: build-all-in-one-image.sh
benchmarks/: README.md  docker-compose.yml  prometheus.yml
certs/: jaeger.conf  server-cert.pem  server-key.pem
cmd/: config-query.yml
components/: README.md
crossdock/: Dockerfile  README.md  docker-compose.yml  jaeger-docker-compose.yml  jaeger-grpc-storage.yaml  jaeger-opentelemetry-docker-compose.yml  jaeger-v2-config.yaml  main.go  otel-agent-config.yml  rules.mk  test.yml
docker-compose/: jaeger-docker-compose-es.yml  (+2 more)
scripts/ai-sidecar/gemini/: README  README.md  gateway_mcp_client.py  main.py  mcp_bridge.py  preflight.sh  pyproject.toml  run.sh  sidecar.py  sidecar_config.py  sidecar_helpers.py  test_gemini_model_config.py  test_mcp_bridge.py  test_sidecar.py  test_sidecar_workflow.py  test_tracing.py  tracing.py  verify_resources.py  ws_commands.py
scripts/ai-sidecar/ollama/: README.md  llm.py  main.py  mcp_bridge.py  preflight.sh  pyproject.toml  run.sh  sidecar.py  sidecar_config.py  sidecar_helpers.py  test_sidecar_workflow.py  tracing.py
(+5661 files in other folders)
