[project]
name = "ollama-sidecar"
version = "0.1.0"
description = "Python sidecar that runs an Agent Client Protocol (ACP) agent backed by a local Ollama model and exposes a Jaeger MCP bridge for observability and tooling integration."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.8.1",
    "mcp>=1.19.0",
    "ollama>=0.6.2",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-sdk",
    "websockets>=15.0.1,<16.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.3.4",
]
